# pgmemory

./: .dockerignore  .gitignore  404.html  Dockerfile.test  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  eval.yml  release.yml  semver-release.yml  test-release.yml
adapters/adk/: index.html
adapters/langchain/: index.html
api/adapters/: index.html
api/embeddings/: index.html
api/store/: index.html
api/types/: index.html
concepts/: index.html
docs/: concepts.md  embedding-providers.md  getting-started.md  index.md
docs/adapters/: adk.md  langchain.md
docs/api/: adapters.md  embeddings.md  store.md  types.md
embedding-providers/: index.html
example/adk/adk_example/: agent.py  pyproject.toml
getting-started/: index.html
scripts/: eval_search.py  test.py  test_docker.py  test_docker_entrypoint.sh  test_pglite.py
search/: search_index.json
site/: index.html  objects.inv  sitemap.xml
site/api/adapters/: index.html
site/api/store/: index.html
site/api/types/: index.html
site/concepts/: index.html
site/search/: search_index.json
src/pgmemory/: __init__.py  embeddings.py  models.py  store.py  types.py
src/pgmemory/adapters/: __init__.py  adk.py  langchain.py
tests/: helpers.py  test_integration.py  test_unit.py
