[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgmemory"
version = "0.0.4"
description = "Opinionated multi-user agent memory on PostgreSQL + pgvector. Hybrid SQL/semantic search, lifecycle management, framework-agnostic."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agent", "memory", "pgvector", "postgresql", "llm", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
]

[project.urls]
Homepage = "https://github.com/ashleyrodan/pgmemory"
Repository = "https://github.com/ashleyrodan/pgmemory"
Issues = "https://github.com/ashleyrodan/pgmemory/issues"
Changelog = "https://github.com/ashleyrodan/pgmemory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
adk = ["google-adk>=1.0.0", "google-genai>=1.0.0"]
vertex = ["google-genai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
openai = ["openai>=1.50.0"]
all = ["pgmemory[adk,vertex,ollama,openai]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.0",
    "bump-my-version>=0.28",
    "twine>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pgmemory"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "pgvector.**",
    "ollama.**",
    "google.**",
    "openai.**",
    "langchain_core.**",
    "testcontainers.**",
]

# SQLAlchemy uses declarative patterns (Column(), dynamic models) that ty
# cannot understand without a plugin. Suppress these until ty gains plugin support.
[tool.ty.rules]
invalid-assignment = "ignore"
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:This declarative base already contains a class:sqlalchemy.exc.SAWarning",
]

[tool.bumpversion]
current_version = "0.0.4"
commit = true
tag = true
tag_name = "v{new_version}"
message = "release: v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
